Updated to J21 Syntax through megamek.common.ui